SUBDIRS = Common

if OGRE_BUILDING_DEMOS
 SUBDIRS += SkeletalAnimation BezierPatch EnvMapping Transpacency Lighting \
            ParticleFX TextureFX SkyDome BSP SkyPlane SkyBox CameraTrack Terrain \
            RenderToTexture Water CubeMapping Dot3Bump Smoke CelShading Fresnel \
            DynTex VolumeTex Grass DeferredShading Isosurf ParticleGS PCZTestApp

if HAVE_CEGUI
 SUBDIRS += Gui FacialAnimation OceanDemo Compositor Shadows Instancing
endif
endif
